--- a/testSelect.html
+++ b/testSelect.html
@@ -108,6 +108,7 @@
         let next = "http://ya.ru"
         let a = document.getElementById("form-select");
         let text = a.options[3].text;
+console.log(a)
         let value = a.options[3].value;
         function getValue() {
             let a = document.getElementById("form-select");
