--- a/testSelect.html
+++ b/testSelect.html
@@ -28,7 +28,7 @@
                 <div class="mb-3">
                     <div class="form-group">
                         <label>Select</label>
-                        <input type="text" class="form-control" id="name" placeholder="" name="top">
+                        <input type="text" pattern="\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}" class="form-control" id="name" placeholder="" name="top">
 
                     </div>
 
@@ -69,7 +69,7 @@
                 </div>
             </div>
         </div>
-    
+
 
 <div class="row align-items-start">
     <div class="col" style="border:1px solid red; ">
